2001-02-25  Waider  <waider@waider.ie>

	* html/bbdb-2.20.tar.gz:
	Shouldn't have been in here in the first place. Sorry 'bout that.


2001-02-25  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* texinfo/bbdb.texinfo: Format it so that texinfo-format-buffer
	can parse it.

	* texinfo/infohack.el: New.
	
	* texinfo/Makefile.in (Makefile): Add.
	(bbdb.info): Use batch-makeinfo if there is no makeinfo.

2001-02-21  Waider  <waider@waider.ie>
        * lisp/bbdb.el
	Restore old bbdb-message-cache macros as replacement functions
	  were buggy.
        Stop BBDB from adding AKAs when you tell it you don't want them.

2001-02-21  Sam Steingold  <sds@gnu.org>	
	*lisp/bbdb.el
	New user option for GUI features

2001-02-19  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* lisp/Makefile.in (bbdb-autoloads.el): 
	Insert (provide 'bbdb-autoloads) when generated by FSF Emacs.

2001-02-19  Waider  <waider@waider.ie>

	* lisp/bbdb-snarf.el: 
	doco typo fixo

	* lisp/bbdb.el: 
	bbdb-electric-p defaults to off.
	require 'bbdb-autoloads instead of loading them.
	bbdb-whois moved from M-w to W so you can do copies in *BBDB*
	moved some XEmacs-stuff to bbdb-gui, where it's Emacs-agnostic

	* lisp/bbdb-xemacs.el:
	Moved font and menu stuff to bbdb-gui.el

	* lisp/Makefile.in: 
	Added target for bbdb-gui

	* lisp/bbdb-gui.el:
	Menu and font hackery. Works in Emacs as well as XEmacs.

	* Makefile.in:
	Quick fix for LN_S not being defined. Perhaps it's even the
	correct fix.

2001-02-14  Robert Fenk  <fenk@forwiss.de>

	* lisp/bbdb-vm.el (bbdb/vm-update-records): Fixed bug of calling
	message with wrong argument.

2001-02-14  Waider  <waider@waider.ie>

	* lisp/bbdb-com.el:
	Some more defcustom stuff (Alex Schroeder)
	Empty string is a valid Zip code (Alex Schroeder)

	* lisp/bbdb.el: 
	Some defvars changed to defcustoms (Alex Schroeder)
	bbdb-add-or-remove-mail-alias documented in mode help (Alex Schroeder)

	* texinfo/bbdb.texinfo
	Zipcode stuff (Alex Schroeder)
	